# scint

./: .bumpversion.cfg  .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  AUTHORS.md  CONTRIBUTING.md  LICENSE  LICENSE.md  ONTOLOGY.md  README.md  SCRATCH.md  Scint  TASKS.md  __init__.py  agents.py  api.py  app.json  app.py  app_setup.py  cli.py  client_discord.py  context.py  disciplinary-intersections.md  discord_client.py  eventlog  filtered_data.csv  main.py  map.py  out.gv  playground.py  pyproject.toml  schema.md  server.py  test.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  codeql.yml
api/: endpaints.py  endpoints.py  models.py  openai.py  other.py  routes.py
api/endpoints/: __init__.py  data.py  message.py  user.py  worker.py
api/models/: payload.py
app/: main.py
app/api/: message.py
app/handlers/: data.py  message.py
app/processing/: files.py  writer.py
app/services/: __init__.py  cli.py
app/system/: config.py
app/workers/: functions.py  prompts.py  worker.py  workers.py
assistant/: context.py  interface.py  process.py
assistant/functions/: random.py
assistant/processes/: reasoning.py
base/: __init__.py  chat.py  cli.py  coordinator.py  finder.py  generator.py  processor.py  state.py  transformer.py
base/agent/: agent.py  functions.py  state.py
base/agents/: __init__.py  agent.py  assistant.py  coordinator.py  prompts.py  sentry.py
base/config/: cli.py  system.py
cli/: settings.py
client/: index.html
cogiter/: context.py  interface.py  process.py
conf/: app.py  assistant.py  base.py  default.py  user.py
config/: __init__.py  browser.py  components.json  db.py  directions.json  directory.py  functions.py  instructions.json  memory.json  models.py  prompts.py  system.py  terminal.py  tools.json  user.py
core/: agent.py  agents.py  artifacts.py  assistant.py  chat.py  cli.py  collaborator.py  completer.py  config.py  context.py  coordinator.py  environment.py  experiment.py  file.py  function.py  functions.py  generator.py  handler.py  interface.py  memory.py  message.py  observer.py  operator.py  persona.py  plugins.py  process.py  processor.py  prompt.py  prompts.py  providers.py  state.py  util.py  worker.py
data/: catalog.kz  databases.py  example.json
deltron/: constants.py  coordinator.py  endpoints.py  server.py
docs/: 00-overview.md  01-introduction.md  02-architecture.md  04-context.md  05-composition.md  05-search.md  06-data.md  06-structure.md  07-parsing.md  08-schema.md  README.md  api.md  app.py  applescript.py  architecture.md  browsing.md  component.py  context.md  data.py  function.py  functions.md  lifecycles.md  module.py  object_sketch.py  openai_notes.py  relay.py  scheduler.py  schema.md  scope.py  structure.py  system.py
examples/: README.md  discord_client.py  process.yaml
handlers/: api.py  events.py  fetch_files.py  fetch_weather.py  fetch_website.py  filesystem.py  get_weather.py  parse_url.py  search_web.py  weather.py  web.py
kala/: index.html
kala2/: index.html
processing/: files.py  parser.py  tokenizer.py  writer.py
scint/: README.md  __init__.py  app.py  app_setup.py  assistant.py  cli.py  clients.py  conf.py  config.py  configure.py  console.py  constants.py  endpoints.py  entrypoint.py  logging.py  main.py  message.py  routers.py  server.py  settings.py  setup.py  util.py  worker.py
server/: README.md  SCRATCH.md  __init__.py  __main__.py  main.py  routes.py  server.py
services/: config.py  openai.py  persistence.py  util.py
settings/: api.json  app.json  core.json  discourse.json  operation.json  providers.json  registries.json  services.json  settings.json  structure.json  studio.json  user.json
src/: __init__.py  __main__.py  api.py  bootstrap.py  config.py  routes.py
test/: context.py
tests/: __init__.py  __main__.py  agentic.py  aspect.py  bridge.py  broker.py  callable.py  check_meilisearch.py  code_parsing.py  console.py  construct.py  context.py  context_data.json  core.json  data_models.py  datastore.py  decorators.py  distributor.py  function.py  invoker.py  machine.py  main.py  messaging.py  mux.py  observation.py  old.py  openweather_handler.py  pipeline-experiment.md  protocols.py  repository.py  search.py  services.py  settings.json  settings.py  socket.py  socks.py  system.py  test.py  test_actors.py  test_api.py  (+12 more)
util/: env.py  logfile  logger.py  logging.py  prose.py  tokenizer.py
web/: index.html  server.py  tailwind.config.js
workers/: __init__.py  api_parser.py  code_generation.py  content_generation.py  create_content.py  crud_file.py  data_access.py  diverge.py  evaluate.py  event_manager.py  fetch.py  file_manager.py  file_operations.py  generate.py  generate_text.py  get_weather.py  google.py  modify.py  parse_url.py  search.py  search_web.py  search_wikipedia.py  sort.py  validate.py  weather.py  web_browser.py  web_browsing.py  workers.py
(+949 files in other folders)
