[project]
name = "scint"
version = "0.1.0"
description = "Add your description here"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT License" }
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.10.10",
    "anthropic>=0.39.0",
    "meilisearch>=0.34.0",
    "meilisearch-python-sdk>=4.3.0",
    "openai>=1.55.2",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
    "rich>=13.9.4",
    "tree-sitter>=0.24.0",
    "tree-sitter-css>=0.23.2",
    "tree-sitter-html>=0.23.2",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-markdown>=0.3.2",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-typescript>=0.23.2",
    "websockets>=15.0",
]

[tool.setuptools]
package-dir = {"src" = "src"}

[tool.pytest]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
pythonpath = ["."]

[tool.pyright]
venvPath = ".venv"
venv = "."
reportMissingImports = true
reportSyntaxErrors = true
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = "none"
reportMissingModuleSource = true
reportGeneralTypeIssues = false
typeCheckingMode = "off"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
