[project]
name = "scint"
version = "0.1.0"
description = "Add your description here"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT License" }
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.10.10",
    "alembic>=1.15.2",
    "anthropic>=0.39.0",
    "asyncpg>=0.30.0",
    "attrs>=25.1.0",
    "bs4>=0.0.2",
    "epoch>=0.1.5",
    "falcon>=4.0.2",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "kuzu>=0.9.0",
    "lxml>=5.3.1",
    "meilisearch>=0.34.0",
    "meilisearch-python-sdk>=4.3.0",
    "monotonic>=1.6",
    "numpy>=2.2.4",
    "openai>=1.55.2",
    "pathspec>=0.12.1",
    "pgvector>=0.4.1",
    "psycopg[binary]>=3.2.7",
    "pytest>=8.4.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "redis>=5.2.1",
    "rich>=13.9.4",
    "sqlalchemy[asyncio]>=2.0.40",
    "tavily-python>=0.7.0",
    "textual>=3.1.1",
    "tomlkit>=0.13.2",
    "tree-sitter>=0.24.0",
    "tree-sitter-css>=0.23.2",
    "tree-sitter-html>=0.23.2",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-markdown>=0.3.2",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-typescript>=0.23.2",
    "uvicorn>=0.34.2",
    "websockets>=15.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
package-dir = {"src" = "src"}

[tool.pyright]
venvPath = ".venv"
venv = "."
reportMissingImports = true
reportSyntaxErrors = true
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = "none"
reportMissingModuleSource = true
reportGeneralTypeIssues = false
typeCheckingMode = "off"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
